From ffe6790 (ephemeris):
========================

In prisim/interferometry.py,

(*) Import ICRS, FK5, AltAz, and EarthLocation modules from astropy
(*) In member function observe() of class InterferometerArray, inputs
timestamp and lst are replaced with timeobj which is an instance of
class astropy.time.Time. Attributes timestamp and lst are determined
from input timeobj. Update member function docstring accordingly
(*) In member function observe() of class InterferometerArray,  
create sky coordinates from astropy.SkyCoord and transform to AltAz
frame instead of determining Alt-Az from standard transformations

In scripts/run_prisim.py,

(*) Import ICRS, FK5, AltAz, and EarthLocation modules from astropy
(*) Create list of time objects and Local Apparent Sidereal Times from
these time objects
(*) Create sky coordinates from astropy.SkyCoord and transform to
AltAz frame instead of determining Alt-Az from standard
transformations
(*) Pass time object in call to InterferometerArray.observe() instead
of timestamp and lst

Merge 378c269 (master) into 395d61a (ephemeris):
===============================================

(*) Bring changes in master branch into ephemeris branch

From 7c5fdda (gleam):
====================

In prisim/examples/simparms/defaultparms.yaml,

(*) Replace fgparm with skyparm

In scripts/run_prisim.py,

(*) Replace all usage of 'fg' with 'sky' in variables

In prisim/interfrometry.py,

(*) Replace all usage of 'fg' with 'sky' in variables

From 0ec6259 (gleam):
====================

In scripts/run_prisim.py,

(*) Remove unused subset() operations on skymod object

From caa2ea2 (gleam):
====================

In prisim/examples/simparms/defaultparms.yaml,

(*) Add parameter roi_radius under sky model parameters

In scripts/run_prisim.py,

(*) Read and pass roi_radius in calls to
RI.InterferometerArray.observe()
(*) Select the visible sources from the sky model based on roi_radius
(*) Assumption that roi_radius is always 90 is now replaced with